# GoldTo

./: .env.example  .gitignore  README-DEPLOY.md  README.md  dev.sh  docker-compose.yml  index.html  nginx.conf  package.json  push_to_github.sh  requirements.txt  setup.sh
airs/: findings.md  progress.md  task_plan.md
apps/api/: pytest.ini  requirements.txt
apps/web/: index.html  package-lock.json  (+2 more)
backend/: Dockerfile  app.py  config.py  main.py  pyproject.toml
backend/agents/: agent.py  persona_agent.py  report_agent.py  simulation.py  simulation_engine.py
backend/api/: alert_routes.py  briefing_routes.py  dashboard_routes.py  routes.py  scheduler_routes.py  source_routes.py  user_routes.py
backend/data/: goldto.db
backend/filter/: __init__.py  relevance_engine.py
backend/graph/: graph_builder.py  knowledge_graph.py
backend/intel/: __init__.py  worldmonitor_filter.py
backend/intelligence/: __init__.py  analysis_engine.py  crew_factory.py  data_sources.py  llm_client.py
backend/memory/: zep_memory.py
backend/models/: __init__.py  alert.py  briefing.py  database.py  user.py
backend/push/: __init__.py  base.py  dingtalk.py  email.py  feishu.py  wecom.py
backend/scheduler/: __init__.py  daily_briefing_job.py  trigger.py
backend/sources/: __init__.py  base.py  competitor.py  legal_compliance.py  product_trend.py  social_media.py  world_monitor.py
backend/utils/: llm_client.py  mock_client.py
data/: demo.sqlite  source_manifest.json
docs/: index.html
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+77 files in other folders)
