[project]
name = "goldto-backend"
version = "1.0.0"
description = "GoldTo Swarm Intelligence Engine - Backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sse-starlette>=2.1.0",
    "networkx>=3.3",
    "pypdf>=4.2.0",
    "httpx>=0.27.0",
    "zep-cloud>=2.0.0",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
